--- a/app/src/main/res/layout/include_post_text.xml
+++ b/app/src/main/res/layout/include_post_text.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/post_title"
@@ -22,4 +23,10 @@
         android:layout_marginTop="5dp"
         tools:text="@string/lorem" />
 
+    <Button
+        android:id="@+id/approve_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Approve" />
 </LinearLayout>
+<!--</LinearLayout>-->
