--- a/app/src/main/res/layout/include_post_text.xml
+++ b/app/src/main/res/layout/include_post_text.xml
@@ -3,30 +3,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/post_title"
         style="@style/TextAppearance.AppCompat.Medium"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
         android:textStyle="bold"
+
         tools:text="My First Post" />
 
     <TextView
         android:id="@+id/post_body"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        tools:text="@string/lorem" />
+        android:text="Body"/>
 
     <Button
         android:id="@+id/approve_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
-        tools:text="Approve" />
+        android:layout_gravity="center"
+
+        android:backgroundTint="#ffaa00"
+        android:text="Approve" />
+
 </LinearLayout>
 <!--</LinearLayout>-->
