--- a/app/src/main/res/layout/activity_daily_income.xml
+++ b/app/src/main/res/layout/activity_daily_income.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.google.firebase.quickstart.effectivenavigation.reports.DailyIncome">
 
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/graph"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </android.support.constraint.ConstraintLayout>
