--- a/app/src/main/res/layout/activity_daily_income.xml
+++ b/app/src/main/res/layout/activity_daily_income.xml
@@ -6,8 +6,34 @@
     android:layout_height="match_parent"
     tools:context="com.google.firebase.quickstart.effectivenavigation.reports.DailyIncome">
 
-    <com.jjoe64.graphview.GraphView
-        android:id="@+id/graph"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
+
+        </android.support.v4.view.ViewPager>
+
+
+        <DatePicker
+            android:id="@+id/datePicker"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+
+
+
+
+
+
+
 </android.support.constraint.ConstraintLayout>
