--- a/app/src/main/res/layout/activity_daily_income.xml
+++ b/app/src/main/res/layout/activity_daily_income.xml
@@ -16,7 +16,7 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2">
+            android:layout_weight="4">
 
         </android.support.v4.view.ViewPager>
 
@@ -25,7 +25,8 @@
             android:id="@+id/datePicker"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:headerBackground="#123456" />
 
     </LinearLayout>
 
