adding stock view status on going

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,10 @@
         android:title="@string/menu_logout"
         android:visible="true"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_stockview"
+        android:title="@string/menu_stockview"
+        android:visible="true"
+        app:showAsAction="never" />
+
 </menu>
